--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
    <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.9.1-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <inceptionYear>2008</inceptionYear>
@@ -24,7 +24,9 @@
   </scm>
 
   <properties>
-    <!-- 16-Sep-2016, tatu: Retain Java6/JDK1.6 compatibility for streaming for Jackson 2.x -->
+    <!-- 07-Aug-2017: Current thinking is to further retain Java6/JDK1.6 compatibility
+              for streaming for Jackson 3.0 too
+      -->
     <javac.src.version>1.6</javac.src.version>
     <javac.target.version>1.6</javac.target.version>
 
@@ -56,7 +58,6 @@ com.fasterxml.jackson.core.*;version=${project.version}
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
           <configuration>
             <source>${javac.src.version}</source>
             <target>${javac.target.version}</target>
@@ -110,7 +111,6 @@ com.fasterxml.jackson.core.*;version=${project.version}
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
           <configuration>
               <aggregate>true</aggregate>
               <source>1.6</source>
