--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 # core streaming now requires Java 8
 jdk:
   - openjdk8
-  - openjdk9
+  - oraclejdk9
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # http://blog.xeiam.com/2013/05/configure-travis-ci-to-deploy-snapshots.html
