--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,9 @@
   <modelVersion>4.0.0</modelVersion> 
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
-    <!-- One of few Jackson modules that depend on parent and not jackson-bom -->
-    <artifactId>jackson-parent</artifactId>
-    <!-- need 2.9.1 to compile on Java 9 -->
-    <version>2.9.1</version>
+    <!-- For 2.9.2 and beyond, new parent pom; extends jackson-bom -->
+    <artifactId>jackson-base</artifactId>
+    <version>2.9.2-SNAPSHOT</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
@@ -42,41 +41,26 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/core/json</packageVersion.dir>
     <packageVersion.package>${project.groupId}.json</packageVersion.package>
+    <!-- usually above is fine for Automatic Module Name, but not here: -->
+    <jdk.module.name>com.fasterxml.jackson.core</jdk.module.name>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <!-- parent provides junit dep, not repeated here -->
 
   <build>
     <plugins>
+      <!-- Important: enable enforcer plug-in: -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
-          <configuration>
-            <source>${javac.src.version}</source>
-            <target>${javac.target.version}</target>
-            <encoding>UTF-8</encoding>
-            <maxmemory>512m</maxmemory>
-            <links>
-              <link>http://docs.oracle.com/javase/7/docs/api/</link>
-            </links>
-          </configuration>
-          <executions>
-            <execution>
-              <id>attach-javadocs</id>
-              <phase>verify</phase>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
+        <artifactId>maven-enforcer-plugin</artifactId>
+	<executions> <!-- or?  combine.children="merge"> -->
+          <execution>
+            <id>enforce-properties</id>
+	        <phase>validate</phase>
+            <goals><goal>enforce</goal></goals>
+          </execution>
+        </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
@@ -92,70 +76,12 @@ com.fasterxml.jackson.core.*;version=${project.version}
           </excludes>
         </configuration>
       </plugin>
+      <!-- settings are fine, but needed to trigger execution! -->
       <plugin>
-        <!-- Inherited from oss-base. Generate PackageVersion.java.-->
         <groupId>com.google.code.maven-replacer-plugin</groupId>
         <artifactId>replacer</artifactId>
-        <executions>
-          <execution>
-            <id>process-packageVersion</id>
-            <phase>generate-sources</phase>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- 06-Sep-2017, tatu: Try to generate "automatic module name" -->
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <configuration>
-          <!-- note: usually would use `packageVersion.package`, but need slight variation here -->
-          <instructions combine.children="merge">
-            <Automatic-Module-Name>com.fasterxml.jackson.core</Automatic-Module-Name>
-          </instructions>
-        </configuration>
       </plugin>
     </plugins>
   </build>
-
-  <reporting>
-    <plugins>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
-          <configuration>
-              <aggregate>true</aggregate>
-              <source>1.6</source>
-              <encoding>UTF-8</encoding>
-              <maxmemory>1g</maxmemory>
-              <links>
-                  <link>http://docs.oracle.com/javase/7/docs/api/</link>
-              </links>
-              <excludePackageNames>${javadoc.package.exclude}</excludePackageNames>
-              <bootclasspath>${sun.boot.class.path}</bootclasspath>
-              <doclet>com.google.doclava.Doclava</doclet>
-              <useStandardDocletOptions>false</useStandardDocletOptions>
-              <additionalJOption>-J-Xmx1024m</additionalJOption>
-              <docletArtifact>
-                  <groupId>com.google.doclava</groupId>
-                  <artifactId>doclava</artifactId>
-                  <version>1.0.3</version>
-              </docletArtifact>
-              <additionalparam>
-                  -hdf project.name "${project.name} ${project.version}"
-                  -d ${project.reporting.outputDirectory}/apidocs
-              </additionalparam>
-          </configuration>
-          <reportSets>
-              <reportSet>
-                  <id>default</id>
-                  <reports>
-                      <report>javadoc</report>
-                  </reports>
-              </reportSet>
-          </reportSets>
-      </plugin>
-    </plugins>
-  </reporting>
 
 </project>
