--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
   <version>2.15.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <licenses>
     <license>
