--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
   <version>3.0.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <inceptionYear>2008</inceptionYear>
   <licenses>
@@ -53,7 +53,7 @@ tools.jackson.core.*;version=${project.version}
     <version.bnd.annotation>6.3.1</version.bnd.annotation>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2022-09-18T00:00:00Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2022-11-27T00:00:00Z</project.build.outputTimestamp>
   </properties>
 
   <!-- Alas, need to include snapshot reference since otherwise can not find
