--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,15 @@ com.fasterxml.jackson.core.*;version=${project.version}
           <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
           <createDependencyReducedPom>true</createDependencyReducedPom>
           <minimizeJar>true</minimizeJar>
+          <filters>
+            <filter>
+              <artifact>*:*</artifact>
+              <excludes>
+                <exclude>**/*FromByteArray*</exclude>
+                <exclude>**/*FromCharArray*</exclude>
+              </excludes>
+            </filter>
+          </filters>
         </configuration>
         <executions>
           <execution>
