--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
   </licenses>
   <inceptionYear>2008</inceptionYear>
 
-  <url>https://github.com/FasterXML/jackson-core</url>
+  <url>https://github.com/pnacht/jackson-core</url>
   <scm>
-    <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
-    <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
-    <url>https://github.com/FasterXML/jackson-core</url>
+    <connection>scm:git:git@github.com:pnacht/jackson-core.git</connection>
+    <developerConnection>scm:git:git@github.com:pnacht/jackson-core.git</developerConnection>
+    <url>https://github.com/pnacht/jackson-core</url>
     <tag>HEAD</tag>
   </scm>
 
