--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,4 @@ jobs:
           # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
           # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
       - name: Perform release
-        run: ./mvnw -B -q -ff -ntp release:perform
+        run: ./mvnw -B -q -ff -ntp release:perform -DlocalCheckout=true
