--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ on:
       - "!*b"
 
 jobs:
-  build:
+  release:
     runs-on: "ubuntu-20.04"
     env:
       JAVA_OPTS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
@@ -33,4 +33,6 @@ jobs:
           # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
           # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
       - name: Perform release
+        # The following command will only succeed if the preparation was done via the
+        # release.sh script.
         run: ./mvnw -B -q -ff -ntp release:perform -DlocalCheckout=true
